# energy_monitor

./: .gitignore  CMakeLists.txt  README.md
1_APP/EnergyMonitor/Cfg/: app_energy_monitor_cfg.h
1_APP/EnergyMonitor/Src/: app_energy_monitor.c  app_energy_monitor.h
2_HAL/EnergyMonitor/Src/: hal_energy_monitor.c  hal_energy_monitor.h
2_HAL/Gpio/Cfg/: hal_gpio_cfg.h
2_HAL/Gpio/Src/: hal_gpio.c
2_HAL/Uart/Cfg/: hal_uart_cfg.h
3_DRV/INA226/Cfg/: ina226_cfg.h
3_DRV/Irq/Src/: irq.c
4_Generated/Core/Inc/: stm32f7xx_it.h
4_Generated/Core/Src/: gpio.c  i2c.c  stm32f7xx_it.c
APP/: main.c  main.h  template.h  termplate.c
APP/Ecum/Src/: main.c  main.h
DRV/INA226/Src/: ina226.c  ina226.h  ina226_reg.h
DRV/Irq/Src/: irq.c
HAL/EnergyMonitor/Cfg/: hal_energy_monitor_cfg.h
HAL/EnergyMonitor/Src/: hal_energy_monitor.c  hal_energy_monitor.h
HAL/Gpio/Src/: hal_gpio.c  hal_gpio.h
HAL/Uart/Src/: hal_uart.c  hal_uart.h
